# clickup-mcp-server

./: .coveragerc  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  README_DOCKERHUB.md  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  api-spec-change-template.md  api-spec-pr-template.md  dependabot.yml  webhook-payloads-pr-template.md
.github/tag_and_release/: intent.yaml  release-notes.md  release-title.md  schema.json
.github/workflows/: check-clickup-api-spec.yaml  check-clickup-webhook-payloads.yml  ci.yaml  ci_includes_e2e_test.yaml  docker-ci.yml  dockerhub-readme-ci.yml  docs-automerge.yml  docs-build-check.yaml  documentation.yaml  release-staging.yml  release-validate.yml  release.yml  rw_build_and_test.yaml  rw_build_git-tag_and_create_github-release.yaml  rw_build_git-tag_and_create_github-release_v2.yaml  rw_docker_operations.yaml  rw_docs_operations.yaml  rw_organize_test_cov_reports.yaml  rw_parse_release_intent.yaml  rw_python_package.yaml  rw_run_all_test_and_record.yaml  rw_uv_run_test_with_multi_py_versions.yaml  type-check.yml
clickup_mcp/: __init__.py  clickup.py  client.py  config.py  entry.py  exceptions.py  models.py  types.README.md  types.py  utils.py
clickup_mcp/_base/: app.py
clickup_mcp/api/: __init__.py  analytics.py  folder.py  (+12 more)
docs/: README.md  dev_versions.json  docs_versions.json  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars-development.ts  sidebars-documentation.ts  tsconfig.json
test/: .env.example  config.py  conftest.py  performance_test.py
(+398 files in other folders)
