[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickup-mcp-server"
version = "0.0.0"
description = "🦾 A strong MCP server for ClickUp."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "clickup",
    "mcp",
    "mcp-server",
    "clickup-mcp",
    "clickup-mcp-server",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.116.0",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Chisanan232/clickup-mcp-server"
Repository = "https://github.com/Chisanan232/clickup-mcp-server"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-rerunfailures>=14.0,<15",
    "pytest-asyncio>=0.23.0,<1",
    "coverage~=6.2",
    "pre-commit>=3.5.0,<4",
    "pylint>=3.1.0,<4",
    "mypy>=1.2.0,<2",
]

[tool.hatch.build.targets.sdist]
include = ["clickup_mcp/"]

[tool.hatch.build.targets.wheel]
include = ["clickup_mcp/"]
